# tiur_tricks

./: README.md  README_COLAB.md  TIUR_Adam_TimeToLoss.ipynb  TIUR_Set1_Quickstart.ipynb  create_colab_zip.py  run_set1.py  tiur_tricks.ipynb
tiur_tricks/: README_COLAB.md  __init__.py  config.py  data.py  experiments.py  models.py  optimizers.py  plotting.py  regularizers.py  tiur_metrics.py  trainer.py
ttr_wt2_repo/: README.md  pyproject.toml  requirements.txt
ttr_wt2_repo/configs/: sweep.yaml
ttr_wt2_repo/scripts/: install_nvidia.sh  setup_ubuntu.sh
ttr_wt2_repo/ttr_wt2/: __init__.py  aggregate.py  core.py  run.py  sweep.py
